# VeriTrust

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_veritrust.db
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/api/v1/: api_keys.py  audit.py  auth.py  dashboard.py  fraud.py  health.py  organizations.py  router.py  users.py  verification.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/middleware/: audit_middleware.py  rate_limit_middleware.py
app/models/: __init__.py  api_key.py  audit_log.py  fraud_rule.py  mixins.py  organization.py  refresh_token.py  user.py  verification.py
app/repositories/: api_key_repository.py  audit_log_repository.py  base_repository.py  fraud_rule_repository.py  organization_repository.py  refresh_token_repository.py  user_repository.py  verification_repository.py
app/schemas/: api_keys.py  audit.py  auth.py  common.py  dashboard.py  fraud.py  organizations.py  verification.py
app/services/: api_key_service.py  auth_service.py  dashboard_service.py  fraud_service.py  organization_service.py  verification_service.py
app/utils/: aws.py  crypto.py  validators.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  loki.yml  prometheus.yml
docker/grafana/dashboards/: application_logs.json
docker/grafana/provisioning/dashboards/: dashboards.yml
scripts/: init-localstack.sh
tests/: conftest.py
tests/integration/: test_api_keys.py  test_auth_endpoints.py  test_extra_endpoints.py  test_organization_endpoints.py  test_users_endpoints.py  test_verification_endpoints.py
tests/unit/: test_config.py  test_fraud_service.py  test_repositories.py  test_validators.py
ui/: index.html
