[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritrust"
version = "0.1.0"
description = "Open Source Identity Verification & Fraud Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "VeriTrust" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.18",
    # Redis & Cache
    "redis[hiredis]>=5.2.0",
    # Celery
    "celery[redis]>=5.4.0",
    # AWS / LocalStack
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    # HTTP client
    "httpx>=0.28.0",
    # Logging
    "structlog>=24.4.0",
    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Email
    "aiosmtplib>=3.0.0",
    # Phone validation
    "phonenumbers>=8.13.0",
    # Utilities
    "python-ulid>=3.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "types-boto3>=1.35.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.hatch.envs.default]
features = ["dev"]
